# rtems

c/src/lib/libbsp/arm/beagle/: Makefile.am  configure.ac  preinstall.am
c/src/lib/libbsp/arm/beagle/adc/: adc.c
c/src/lib/libbsp/arm/beagle/gpio/: bbb-gpio.c  gpio.c
c/src/lib/libbsp/arm/beagle/i2c/: i2c.c  i2c_init.c
c/src/lib/libbsp/arm/beagle/include/: adc.h  beagleboneblack.h  bsp.h  i2c.h  irq.h
c/src/lib/libbsp/shared/: gpio.c
c/src/lib/libbsp/shared/include/: gpio.h
c/src/lib/libcpu/arm/shared/include/: am335x.h
c/src/libchip/: Makefile.am  preinstall.am
c/src/libchip/i2c/: adxl345.c  adxl345.h
cpukit/: Makefile.am  preinstall.am
cpukit/include/rtems/: gpio.h
testsuites/samples/: Makefile.am  configure.ac
testsuites/samples/gpio/: Makefile.am  bbb-conf.c  init.c
testsuites/samples/i2c/: Makefile.am  init.c
